<resources>
    <string name="app_name" translatable="false">CafeRate</string>
    <string name="title_home">Дом</string>
    <string name="title_list">Список</string>
    <string name="title_search">Поиск</string>
    <string name="title_review">Отзыв</string>
    <string name="title_settings">Настройки</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Выбор по типу</string>
    <string name="menu_by_map">Показать на карте</string>
    <string name="menu_list">Показать списком</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_response">Оценить кафе</string>
    <string name="menu_save_list">Сохранить список</string>
    <string name="menu_offline">Оффлайн-список</string>

    <string name="open_map">Показать на карте</string>
    <string name="choice_by_type">Выбор по типу</string>

    <string name="choice_by_list">Показать списком</string>
    <string name="search">Поиск</string>
    <string name="registration">Регистрация</string>
    <string name="offline">Оффлайн</string>
    <string name="save_list">Сохранить список</string>
    <string name="offline_mode">Оффлайн-список</string>
    <string name="restaurant">Ресторан</string>
    <string name="Bar">Бар</string>
    <string name="TOP">ТОП</string>
    <string name="FAV">Избранное</string>
    <string name="cafe">Кафе</string>
    <string name="fastfood">Фастфуд</string>

    <string name="b_send_review_txt">отправить</string>
    <string name="b_cancel_review_txt">отмена</string>

    <string name="hint_review_txt">Напишите Ваш отзыв</string>
    <string name="l_atmosphere">Атмосфера</string>
    <string name="l_service">Обслуживание</string>
    <string name="l_quality">Кухня</string>
    <string name="SettingsTitle">Settings</string>
    <string name="SettingsCountryTitle">Страна</string>
    <string name="SettingsDefaultCountry">Россия</string>
    <string name="SettingsCityTitle">Город</string>
    <string name="SettingsDefaultCity">Москва</string>
    <string name="SettingsDistanceTitle">Ограничение дальности</string>
    <string name="SettingsDistanceSummary">Искать в пределах N*100 m</string>
    <string name="SettingsDefaultDistance" translatable="false">50</string>
    <string name="COUNTRY_KEY" translatable="false">country</string>
    <string name="CITY_KEY" translatable="false">city</string>
    <string name="DISTANCE_KEY" translatable="false">distance</string>
    <string name="SettingsDistanceFilterTitle">Искать по расстоянию</string>
    <string name="SettingsDistanceFilterSummary">Включает ограничение поиска общепита по расстоянию (в км) от установленной точки</string>
    <string name="DISTANCEFILTER_KEY" translatable="false">DistanceFilter</string>

    <string name="author">Автор</string>
    <string name="user_icon">Статус</string>
    <string name="user_rating">+200</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBgQhfZPKjhli7XJonmQdUmLtkRnGpUKnU</string>
    <string name="SettingsDistanceFilter">false</string>

</resources>
