<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_by_map" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_response"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_response" />
    </group>

    <item android:title="@string/offline">
        <menu>
            <item
                android:id="@+id/nav_save_list"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_save_list" />
            <item
                android:id="@+id/nav_offline_mode"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_offline" />
        </menu>
    </item>

</menu>
