<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review"
        android:title="@string/title_review" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_lists"
        android:title="@string/title_list" />
    <item
        android:id="@+id/navigation_offline"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />
</menu>
