<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gb.rating.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.gb.rating.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.gb.rating.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_offline"
        android:name="com.gb.rating.ui.offline.OfflineFragment"
        android:label="@string/title_offline"
        tools:layout="@layout/fragment_offline" />
    <fragment
        android:id="@+id/navigation_review"
        android:name="com.gb.rating.ui.review.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />
</navigation>