<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/SettingsTitle">

<!--        <CheckBoxPreference-->
<!--            app:key="checkbox"-->
<!--            app:title="@string/title_checkbox_preference"-->
<!--            app:summary="@string/summary_checkbox_preference"/>-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="switch"-->
<!--            app:title="@string/title_switch_preference"-->
<!--            app:summary="@string/summary_switch_preference"/>-->

        <DropDownPreference
            app:key="@string/COUNTRY_FIELD"
            app:title="@string/SettingsCountryTitle"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/country_titles"
            app:entryValues="@array/country_values"
            app:defaultValue="@string/SettingsDefaultCountry"/>

        <DropDownPreference
            app:key="@string/CITY_FIELD"
            app:title="@string/SettingsCityTitle"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/city_titles"
            app:entryValues="@array/city_values"
            app:defaultValue="@string/SettingsDefaultCity"/>

<!--        <SeekBarPreference-->
<!--            app:key="seekbar"-->
<!--            app:title="@string/title_seekbar_preference"-->
<!--            app:defaultValue="20"/>-->
    </PreferenceCategory>

</PreferenceScreen>