<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:baselineAligned="false"
    android:orientation="horizontal">

        <ImageView
            android:id="@+id/iw_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cv_margin_end"
            android:layout_marginBottom="@dimen/cv_margin_btwn"
            android:clickable="true"
            android:contentDescription="@string/restaurant"
            android:focusable="true"
            android:onClick="onRestClick"
            app:layout_constraintBottom_toTopOf="@+id/iw_bar"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:srcCompat="@drawable/card_rest">
        </ImageView>
        <ImageView
            android:id="@+id/iw_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cv_margin_btwn"
            android:clickable="true"
            android:contentDescription="@string/Bar"
            android:focusable="true"
            android:onClick="onBarClick"
            app:layout_constraintBottom_toTopOf="@+id/iw_fav"
            app:layout_constraintStart_toStartOf="@+id/iw_rest"
            app:srcCompat="@drawable/card_bar">
        </ImageView>
        <ImageView
            android:id="@+id/iw_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cv_margin_btwn"
            android:clickable="true"
            android:contentDescription="@string/FAV"
            android:focusable="true"
            android:onClick="onFavClick"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/iw_rest"
            app:srcCompat="@drawable/card_fav">
        </ImageView>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="56dp" />
        <ImageView
            android:id="@+id/iw_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cv_margin_end"
            android:clickable="true"
            android:contentDescription="@string/TOP"
            android:focusable="true"
            android:onClick="onTopClick"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/iw_rest"
            app:srcCompat="@drawable/card_top" />
        <ImageView
            android:id="@+id/iw_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/cafe"
            android:focusable="true"
            android:onClick="onCafeClick"
            app:layout_constraintBottom_toBottomOf="@+id/iw_rest"
            app:layout_constraintEnd_toEndOf="@+id/iw_top"
            app:srcCompat="@drawable/card_cafe" />
        <ImageView
            android:id="@+id/iw_fastfood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/fastfood"
            android:focusable="true"
            android:onClick="onFastClick"
            app:layout_constraintBottom_toBottomOf="@+id/iw_fav"
            app:layout_constraintEnd_toEndOf="@+id/iw_top"
            app:srcCompat="@drawable/card_fastfood" />
</androidx.constraintlayout.widget.ConstraintLayout>